--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "prestart": "sb-rn-get-stories",
+    "storybook-watcher": "sb-rn-watcher"
   },
   "dependencies": {
     "expo": "~47.0.3",
@@ -19,11 +21,17 @@
     "react-native-reanimated": "~2.12.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
-    "react-native-web": "~0.18.7"
+    "react-native-web": "~0.18.7",
+    "@storybook/core-common": "next",
+    "@storybook/react-native": "next",
+    "@react-native-async-storage/async-storage": "~1.17.3"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9"
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+    "@types/react": "^18.0.28",
+    "@types/react-native": "^0.71.3",
+    "typescript": "^4.6.3"
   },
   "resolutions": {
     "metro": "^0.73.7",
