--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.7",
+    "@storybook/addon-ondevice-actions": "next",
+    "@storybook/addon-ondevice-backgrounds": "next",
+    "@storybook/addon-ondevice-controls": "next",
+    "@storybook/addon-ondevice-notes": "next",
     "@storybook/core-common": "next",
     "@storybook/react-native": "next",
     "@react-native-async-storage/async-storage": "~1.17.3"
